chore: fix alignment on about

--- a/style.css
+++ b/style.css
@@ -378,6 +378,10 @@ ul {
   margin-bottom: 1rem;
 }
 
+.about-content p {
+  margin-bottom: 1rem;
+}
+
 .highlight-text {
   font-size: 1.2rem;
   font-weight: 500;
@@ -789,7 +793,7 @@ footer {
   color: rgba(255, 255, 255, 0.7);
 }
 
-/* Responsive Design */
+/* Responsive Design */ 
 @media (max-width: 1024px) {
   .about-container {
     flex-direction: column;
@@ -868,6 +872,33 @@ footer {
     flex-direction: column;
     gap: 1rem;
   }
+
+  .about-container {
+    text-align: left;
+  }
+
+  .about-container .about-content .personal-info .info-item {
+    justify-content: left;
+  
+  }
+
+  .about-container .about-content .personal-info .info-item .info-title {
+    margin-left: 2rem;
+  
+  }
+
+  .about-container h3 {
+    margin-left: 2rem;
+    
+  
+  }
+
+  .about-content p {
+    margin: 2rem 2rem 2rem 2rem;
+    text-align: left;
+  
+  }
+
 }
 
 @media (max-width: 480px) {
